[package]
name = "weaver_otel_schema"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
weaver_version = { path = "../weaver_version" }
weaver_common = { path = "../weaver_common" }

thiserror.workspace = true
serde.workspace = true
serde_yaml.workspace = true
miette.workspace = true
