[package]
name = "weaver_policy_engine"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true


[lints]
workspace = true


[dependencies]
weaver_resolved_schema = { path = "../weaver_resolved_schema" }

thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

regorus = "0.1.2"

[dev-dependencies]
# Required for testing