[package]
name = "weaver_resolved_schema"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
weaver_version = { path = "../weaver_version" }
weaver_semconv = { path = "../weaver_semconv" }

thiserror.workspace = true
serde.workspace = true
ordered-float.workspace = true
schemars.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
serde_json.workspace = true
