[package]
name = "weaver_resolver"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
weaver_common = { path = "../weaver_common" }
weaver_diff = { path = "../weaver_diff" }
weaver_semconv = { path = "../weaver_semconv" }
weaver_resolved_schema = { path = "../weaver_resolved_schema" }

thiserror.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
walkdir.workspace = true
miette.workspace = true
itertools.workspace = true
globset.workspace = true
log.workspace = true
rand.workspace = true

[dev-dependencies]
glob = "=0.3.3"
tempfile.workspace = true
