[package]
name = "weaver_schema"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true

[dependencies]
weaver_semconv = { path = "../weaver_semconv" }
weaver_version = { path = "../weaver_version" }

serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
ureq.workspace = true

url = {version="2.5.0", features = ["serde"]}