[package]
name = "weaver_search"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
weaver_forge = { path = "../weaver_forge", features = ["openapi"] }
weaver_semconv = { path = "../weaver_semconv", features = ["openapi"] }
serde.workspace = true
utoipa.workspace = true
schemars.workspace = true
