[package]
name = "weaver_semconv"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dev-dependencies]
serde_json.workspace = true

[dependencies]
weaver_common = { path = "../weaver_common" }
weaver_cache = { path = "../weaver_cache" }

serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
ureq.workspace = true
ordered-float.workspace = true
miette.workspace = true
schemars.workspace = true
regex.workspace = true

glob = "0.3.1"