[package]
name = "weaver_semconv"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dev-dependencies]
serde_json.workspace = true
walkdir.workspace = true

[dependencies]
weaver_common = { path = "../weaver_common" }

serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
ureq.workspace = true
ordered-float.workspace = true
miette.workspace = true
schemars.workspace = true
regex.workspace = true
url.workspace = true
once_cell.workspace = true

glob = "0.3.2"
tempdir = "0.3.7"
dirs = "6.0.0"
gix = { version = "0.70.0", default-features = false, features = [
    "comfort",
    "blocking-http-transport-reqwest",
    "max-performance-safe",
    "worktree-mutation",
    "blocking-http-transport-reqwest-rust-tls",
] }
flate2 = "1.0.35"
tar = "0.4.43"
zip = "2.2.2"

