[package]
name = "weaver_semconv"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dev-dependencies]
serde_json.workspace = true
walkdir.workspace = true

[dependencies]
weaver_common = { path = "../weaver_common" }

serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ureq.workspace = true
ordered-float.workspace = true
miette.workspace = true
schemars.workspace = true
regex.workspace = true
globset.workspace = true
itertools.workspace = true

glob = "0.3.2"
jsonschema = "0.32.1"        # JSON Schema validation used to enhance error messages
saphyr = "0.0.4"             # YAML parser preserving span information (location in file)

