[package]
name = "weaver_semconv_gen"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
weaver_cache = { path = "../weaver_cache" }
weaver_logger = { path = "../weaver_logger" }
weaver_resolver = { path = "../weaver_resolver" }
weaver_resolved_schema = { path = "../weaver_resolved_schema" }
weaver_semconv = { path = "../weaver_semconv" }
itertools = "0.12.1"
similar = "2.4.0"
nom = "7.1.3"

thiserror.workspace = true
#serde.workspace = true
#serde_yaml.workspace = true
#serde_json.workspace = true
#rayon.workspace = true
#walkdir.workspace = true

[lints]
workspace = true
