[package]
name = "weaver_template"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true

[dependencies]
weaver_logger = { path = "../weaver_logger" }
weaver_resolver = { path = "../weaver_resolver" }
weaver_schema = { path = "../weaver_schema" }
weaver_cache = { path = "../weaver_cache" }

tera = "1.19.1"
textwrap = "0.16.1"
glob = "0.3.1"
convert_case = "0.6.0"
thread_local = "1.1.8"

thiserror.workspace = true
serde.workspace = true
serde_yaml.workspace = true
rayon.workspace = true
