[package]
name = "weaver_test_support"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Internal test utilities shared across weaver crates."

[dependencies]

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = []
