[package]
name = "weaver_version"
version = "0.9.1"
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
schemars.workspace = true

semver = {version =  "1.0.22", features = ["serde"]}
