[package]
name = "xtask"
version = "0.1.1"
publish = false               # xtask is not meant to be published
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
assert_cmd.workspace = true
serde_json.workspace = true
gix = { version = "0.83.0", default-features = false, features = [
    "comfort",
    "blocking-http-transport-reqwest",
    "max-performance-safe",
    "worktree-mutation",
    "blocking-http-transport-reqwest-rust-tls",
    "sha1",
] }
semver.workspace = true
toml.workspace = true

#[lints]
#workspace = true
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
